Version 10.4.199 - 17 September 2007, by Olivier "blino" Blin

- fix loading of tifm_sd module

Version 10.4.198 - 16 September 2007, by Thierry Vignaud

- fix a crash
- localization:
  o install scim-bridge-qt4 if KDE4 is installed

Version 10.4.197 - 15 September 2007, by Thierry Vignaud

- localization:
  o enable to select 'scim-bridge' as IM
  o install needed packages for skim
  o install scim-qtimm for scim default config
  o remove extra SCIM combinations (simpler)

Version 10.4.196 - 14 September 2007, by Olivier "blino" Blin

- fix typo breaking reading fstab with UUID= entries
- don't set $o->{security} until accepted (#33567)
- packageCallbackChoices: use prefered packages given by perl-URPM 2.00 

Version 10.4.195 - 14 September 2007, by Olivier "blino" Blin

- fix loading of tifm_sd module (#18237)

Version 10.4.194 - 13 September 2007, by Thierry Vignaud

- do not allow to upgrade i586->x86_64 or x86_64->i586 (#33370)
- do not configure "windows" bootloader entries for "hidden" partitions
- fix unwrapped label (#33243)
- fix grub hanging if /boot on xfs (#33267)
- use user_xattr by default on reiserfs (#15068)
- for wait_message, display a banner and move "Please Wait" in the banner

Version 10.4.191 - 5 September 2007, by Thierry Vignaud

- "choose desktop" step:
  o put images along labels in RadioButtons (HIG)
- summary screen:
  o add spacing around separators
  o fix not displaying the security group
- drop support for iiimf
- update bootloader & updates banner icons

Version 10.4.190 - 5 September 2007, by Thierry Vignaud

- display a warning when capslock is enabled and entering a password (#33028)
- fix insmoding raid0 (#33172)

Version 10.4.189 - 4 September 2007, by Thierry Vignaud

- summary screen:
  o add spacing between elements
  o add an horizontal bar between elements

Version 10.4.188 - 4 September 2007, by Thierry Vignaud

- hardware detection layer:
  o add support for tape device again (#31073)