@@ -1,3 +1,5 @@
+- advertising: restore support for $title in .pl files (wrongly dropped in 10.4.195)
+
 Version 10.4.199 - 17 September 2007, by Olivier "blino" Blin
 
 - fix loading of tifm_sd module
